crates/mega-evm/tests/satin/snapshots/satin__deposit_charge__a_creation_that_cannot_pay_the_deposit_cost_runs_out_of_gas_under_the_data_size_limit.snap
---
source: crates/mega-evm/tests/satin/deposit_charge.rs
expression: "&outcomes"
---
{
  "no limit, one gas short": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1313913,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 1313913
    },
    "result_gas": {
      "total_gas_spent": 1313913,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 390,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000a00000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000a00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x8099ad6f3d21e7be3ec90d1f6c8648d8ff8f91a390a9dfb9898771022a6731e5",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000a00002": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0x687c912324a875368144ef3b99a25e1a605c81522a231d9cabd9123f8bf4222d",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "under the limit, exactly enough": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 105014,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 105014
    },
    "result_gas": {
      "total_gas_spent": 105014,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 430,
      "write_records": 3
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000a00000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000a00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xa8b695783ad03d19104e5e4af0dc6543bd975ca440c97eb44d0cd7d7a109e1df",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x44"
          }
        ]
      },
      "0x0000000000000000000000000000000000a00002": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0x687c912324a875368144ef3b99a25e1a605c81522a231d9cabd9123f8bf4222d",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "under the limit, one gas short": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1313913,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 1313913
    },
    "result_gas": {
      "total_gas_spent": 1313913,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 390,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000a00000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000a00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x8099ad6f3d21e7be3ec90d1f6c8648d8ff8f91a390a9dfb9898771022a6731e5",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000a00002": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0x687c912324a875368144ef3b99a25e1a605c81522a231d9cabd9123f8bf4222d",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
